--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- CSS Principal-->
   <link href="css/style.css" rel="stylesheet">
-  <link href="/css/carousel.css" rel="stylesheet">
+  <link href="css/img-static-home.css" rel="stylesheet">
 
 </head>
 
@@ -58,46 +58,18 @@
   </header><!-- #header -->
 
   <!--==========================
-      Carousel
+      Image Home 
   ============================-->
 
-  <div id="carousel-hero" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-hero" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-hero" data-slide-to="1"></li>
-      <li data-target="#carousel-hero" data-slide-to="2"></li>
-    </ol>
-
-    <div class="carousel-inner" role="listbox">
-      <!-- Slide 1  -->
-      <div class="carousel-item active" style="background-image: url('./img/carousel/001.jpg')">
-        <div class="carousel-caption d-none d-md-block"></div>
-      </div>
-
-      <!-- Slide 2 -->
-      <div class="carousel-item" style="background-image: url('./img/carousel/003.jpg')">
-        <div class="carousel-caption d-none d-md-block"> </div>    
-      </div>
-
-      <!-- Slide 3 -->
-      <div class="carousel-item" style="background-image: url('./img/carousel/002.jpg')">
-        <div class="carousel-caption d-none d-md-block"> </div>
-      </div>
-
-    </div>
-
-    <!-- SETAS -->
-    <a class="carousel-control-prev" href="#carousel-hero" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Anterior</span>
-    </a>
-
-    <a class="carousel-control-next" href="#carousel-hero" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Próximo</span>
-    </a>
-
+  <div class="image-home" >
+    <div class="image-container">
+      
+      <img src="img/img-static-home/e3ef6852-0e84-43d5-8cdb-c86cb0282958.jpg" 
+      class="rounded mx-auto d-block img-fluid" alt="grupo-exímio-2019" >
+      
+    </div>      
   </div>
+  
 
 <main id="main">
 
