--- a/index.html
+++ b/index.html
@@ -354,17 +354,17 @@
             <form action="" method="post" role="form" class="contatoForm">
               <div class="form-row">
                 <div class="form-group col-lg-6">
-                  <input type="text" name="nome" class="form-control" id="nome"/>
+                  <input type="text" name="nome" class="form-control" id="nome" placeholder="Nome"/>
                 </div>
                 <div class="form-group col-lg-6">
-                  <input type="email" class="form-control" name="email" id="email"/>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email"/>
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="assunto" id="assunto"/>
+                <input type="text" class="form-control" name="assunto" id="assunto" placeholder="Assunto"/>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="mensagem" rows="5"></textarea>
+                <textarea class="form-control" name="mensagem" rows="5" placeholder="Mensagem"></textarea>
               </div>
               <div class="text-center"><button type="submit" title="Enviar Mensagem">Enviar Mensagem</button></div>
             </form>
